Updated UI on the header, dashboardpage, and transactionspage

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,17 +7,7 @@
   align-items: center;
   justify-content: flex-start; /* Adjusted to prevent center overlap */
   color: white; /* White text */
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  padding-top: 10px;
 }
 
 .App-header {
@@ -33,13 +23,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
