--- a/frontend/src/pages/DashboardPage.css
+++ b/frontend/src/pages/DashboardPage.css
@@ -67,6 +67,38 @@
     color: darkred;
 }
 
+.savings-section {
+    flex: 1;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    color: #2c3e50;
+}
+
+.savings-section h2 {
+    font-size: 2em;
+    color: #2c3e50;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.savings-item {
+    margin-bottom: 20px;
+}
+
+.savings-item h3 {
+    font-size: 1.2em;
+    color: #2c3e50;
+    margin-bottom: 10px;
+}
+
+.delete-savings-btn {
+    background-color: transparent;
+    border: none;
+    font-size: 1.2em;
+}
+
 .transactions-section {
     flex: 2; /* Take up more space for the transactions section */
     background-color: #ffffff;
