--- a/frontend/src/pages/DashboardPage.css
+++ b/frontend/src/pages/DashboardPage.css
@@ -209,7 +209,7 @@
     font-size: 1em;
 }
 
-.modal {
+.modal, .priority-modal {
     position: fixed;
     top: 50%; /* Center vertically */
     left: 50%; /* Center horizontally */
@@ -232,5 +232,41 @@
     z-index: 999; /* Below modal */
   }
 
+.priority-content, .modal form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+.form-group {
+    margin: 15px 0;
+    width: 100%;
+}
+select, input {
+    width: 100%;
+    padding: 8px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button {
+    padding: 10px 15px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #007bff;
+    color: #fff;
+}
+
+  .priority-modal h2 {
+    color: #333;
+    margin-bottom: 15px;
+    size: 1.5em;
+}
 
  
